# hibench

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
agent_versions/: claude-code.json  cline.json  codex.json  cursor-cli.json  devin.json  droid.json  gemini-cli.json  github-cli.json  grok-cli.json  hermes.json  kilo.json  mistral-vibe.json  openclaw.json  opencode.json  openhands.json  pi.json
docs/: architecture.md
hibench/: __init__.py  __main__.py  agents.py  analyze.py  anthropic_tokens.py  automation.py  benchmark.py  benchmark_artifacts.py  benchmark_export.py  benchmark_io.py  benchmark_report.py  benchmark_runs.py  benchmark_schema.py  env_config.py  github_stars.py  marker_dimensions.py  recorder.py  rich_report.py  runner.py  versioning.py
results/: export.json  github_stars.json  mcp.csv  runs.csv  skills.csv  subagents.csv  text_fields.csv  tools.csv
runs/: benchmark_batch-claude-code.json  benchmark_batch-cline.json  benchmark_batch-codex.json  benchmark_batch-cursor-cli.json  benchmark_batch-devin.json  benchmark_batch-droid.json  benchmark_batch-gemini-cli.json  benchmark_batch-github-cli.json  benchmark_batch-grok-cli.json  benchmark_batch-hermes.json  benchmark_batch-kilo.json  benchmark_batch-mistral-vibe.json  benchmark_batch-openclaw.json  benchmark_batch-opencode.json  benchmark_batch-openhands.json  benchmark_batch-pi.json  benchmark_batch.json  benchmark_batches.json
schemas/: benchmark_result.schema.json  trace.schema.json
scripts/: backfill_anthropic_tokens.py
tests/: test_agents.py  (+9 more)
(+12059 files in other folders)
